Crash in WebCore::WebAnimation::timeToNextRequiredTick when running imported/w3c/web-platform-tests/web-animations/interfaces/Animatable/animate-no-browsing-context.html https://bugs.webkit.org/show_bug.cgi?id=187145

Reviewed by Dean Jackson.

Ensure we have a resolved time value before trying to use it.

* animation/WebAnimation.cpp:
(WebCore::WebAnimation::timeToNextRequiredTick const):

Canonical link: https://commits.webkit.org/202515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233430 268f45cc-cd09-0410-ab3c-d52691b4dbfc